--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "i2c-write-iter"
 description = "Exports iterator based parallels to embedded-hal & embedded-hal-async for Write & WriteRead"
-version = "1.0.0-rc.1.1"
+version = "1.0.0-rc.1.2"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/i2c-write-iter"
 repository = "https://github.com/ithinuel/i2c-write-iter"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
